--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,7 @@
       "channel": "preview"
     },
     "production": {
-      "channel": "main"
+      "channel": "production"
     }
   },
   "submit": {
